--- a/index.html
+++ b/index.html
@@ -5,210 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daewon - Homepage</title>
-    <script src="js/tailwindcss_3.3.0.js"></script>
-    <script>
-      const menuHandler = () => {
-        console.log("click!");
-      };
-    </script>
+    <link rel="stylesheet" href="/css/flowbite.min.css" />
+    <script src="/js/flowbite.min.js"></script>
+    <script src="/js/tailwindcss_3.3.0.js"></script>
+    <script src="/js/navbar.js"></script>
   </head>
   <body style="background-color: rgb(32 32 35); color: white">
-    <div data-role="page" id="main">
-      <div
-        class="md:max-w-screen-md mx-auto overflow-y-auto h-screen flex flex-col justify-between"
-      >
+    <div
+      class="md:max-w-screen-md mx-auto overflow-y-auto h-screen flex flex-col justify-between"
+    >
+      <custom-navbar title="Daewon Lim"></custom-navbar>
+      <div class="container mx-auto px-4 pt-14 mb-6 max-w-screen-sm">
         <div
-          class="w-screen h-14 p-2 fixed backdrop-blur-sm flex justify-between"
+          class="box-content rounded-lg p-3 mb-6 text-center"
+          style="background-color: rgb(49 49 52)"
         >
-          <div class="mr-5">
-            <a href="/">
-              <span class="flex p-2.5">
-                <svg
-                  width="20"
-                  height="20"
-                  class="w-5 inline-block transition-transform group-hover:rotate-[20deg]"
-                  viewBox="0 0 40 40"
-                  fill="currentColor"
-                >
-                  <g transform="matrix(1.07541,0,0,1.1001,-1.05651,-0.978215)">
-                    <path
+          Hello, I&apos;m a junior developer based in Korea!
+        </div>
+
+        <div class="md:flex justify-between">
+          <div class="mb-4">
+            <h2 class="text-4xl font-bold leading-tight text-primary">
+              Daewon Lim
+            </h2>
+            <p>Digital uomaep ( Artist / Developer / Designer )</p>
+          </div>
+          <div class="flex justify-center">
+            <img
+              src="image/profile.JPG"
+              alt="profile image"
+              class="border-solid border rounded-full h-28 border-white"
+            />
+          </div>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-bold underline mt-3 mb-4">Work</h2>
+          <p class="text-justify">
+            &nbsp;&nbsp;&nbsp;Daewon is a student and junior developer based in
+            Busan with a passion for studying stacks he wants. He has experience
+            in front-end development, and is a student who is interested in
+            database and back-end and wants to study hard in the future.
+          </p>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-bold underline mt-3 mb-4">Bio</h2>
+          <div class="flex">
+            <div class="font-bold mr-3">2000</div>
+            <div class="text-justify">Born in Tongyeong, Korea.</div>
+          </div>
+          <div class="flex">
+            <div class="font-bold mr-3">2013</div>
+            <div class="font-justify">Graduation from Elementary School</div>
+          </div>
+          <div class="flex">
+            <div class="font-bold mr-3">2016</div>
+            <div>Graduation from Middle School</div>
+          </div>
+          <div class="flex">
+            <div class="font-bold mr-3">2019</div>
+            <div class="font-justify">Graduation from High School</div>
+          </div>
+          <div class="flex">
+            <div class="font-bold mr-3">2025</div>
+            <div class="font-justify">
+              Software major scheduled to be completed.
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <header class="text-2xl font-bold underline mt-3 mb-4">I Like</header>
+          <p class="text-justify">
+            &nbsp;&nbsp;&nbsp;Music, Singing, Playing Soccer, Driving, Movie...
+          </p>
+        </div>
+
+        <div>
+          <header class="text-2xl font-bold underline mt-3 mb-4">
+            On the web
+          </header>
+          <ul>
+            <li>
+              <a href="https://github.com/uomaep" target="blank">
+                <button type="button" class="flex px-4 h-10 items-center">
+                  <span class="mr-2">
+                    <svg
+                      stroke="currentColor"
                       fill="currentColor"
-                      d="M13.319,4.13C13.319,4.13 10.313,4.08 9.501,9.535C9.133,13.546 12.568,15.516 14.12,15.497C15.556,15.495 17.638,14.151 17.486,9.765C17.334,5.38 14.98,4.15 13.319,4.13"
-                    ></path>
-                  </g>
-                  <path
-                    d="M3.12,15.575C2.626,16.02 0.637,18.024 3.508,22.915C6.379,27.806 8.628,23.888 8.923,23.455C9.218,23.021 11.41,20.306 8.664,16.924C5.918,13.543 3.12,15.575 3.12,15.575Z"
-                  ></path>
-                  <g
-                    transform="matrix(1.00722,0,0,0.981856,-0.205441,0.281328)"
-                  >
-                    <path
-                      d="M24.03,4.13C22.048,4.309 20.472,5.325 20.922,9.814C21.373,14.304 24.4,15.613 25.402,15.499C26.404,15.385 28.84,12.521 28.427,9.814C28.013,7.107 26.837,4.296 24.03,4.13Z"
-                    ></path>
-                  </g>
-                  <path
-                    d="M32.114,11.35C32.114,11.35 29.196,13.155 30.864,16.589C32.532,20.023 34.677,19.25 36,18.588C37.322,17.927 38.02,14.778 35.931,12.665C33.843,10.551 32.114,11.35 32.114,11.35Z"
-                  ></path>
-                  <path
-                    d="M19.212,17.136C19.212,17.136 12.651,19.306 12.84,25.174C12.888,28.022 10.569,28.548 11.073,32.567C11.727,34.322 12.649,36.92 15.89,36.85C19.131,36.781 19.603,34.354 23.377,32.97C27.151,31.586 31.009,33.828 33.802,31.213C36.596,28.598 35.188,24.468 31.876,22.731C28.564,20.995 24.793,16.327 19.212,17.136Z"
-                  ></path>
-                </svg>
-                <p>Daewon Lim</p>
-              </span>
-            </a>
-          </div>
-          <div
-            class="w-10 h-10 border border-solid border-gray-600 rounded-lg grid place-items-center mr-2.5"
-          >
-            <button onclick="menuHandler()">
-              <svg
-                viewBox="0 0 24 24"
-                focusable="false"
-                aria-hidden="true"
-                class="w-4 h-4"
-              >
-                <path
-                  fill="currentColor"
-                  d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
-                ></path>
-              </svg>
-            </button>
-          </div>
+                      stroke-width="0"
+                      viewBox="0 0 512 512"
+                      aria-hidden="true"
+                      focusable="false"
+                      height="1em"
+                      width="1em"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"
+                      ></path>
+                    </svg>
+                  </span>
+                  @uomaep
+                </button>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/uomaep/" target="blank">
+                <button type="button" class="flex px-4 h-10 items-center">
+                  <span class="mr-2">
+                    <svg
+                      stroke="currentColor"
+                      fill="currentColor"
+                      stroke-width="0"
+                      viewBox="0 0 512 512"
+                      aria-hidden="true"
+                      focusable="false"
+                      height="1em"
+                      width="1em"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M349.33 69.33a93.62 93.62 0 0193.34 93.34v186.66a93.62 93.62 0 01-93.34 93.34H162.67a93.62 93.62 0 01-93.34-93.34V162.67a93.62 93.62 0 0193.34-93.34h186.66m0-37.33H162.67C90.8 32 32 90.8 32 162.67v186.66C32 421.2 90.8 480 162.67 480h186.66C421.2 480 480 421.2 480 349.33V162.67C480 90.8 421.2 32 349.33 32z"
+                      ></path>
+                      <path
+                        d="M377.33 162.67a28 28 0 1128-28 27.94 27.94 0 01-28 28zM256 181.33A74.67 74.67 0 11181.33 256 74.75 74.75 0 01256 181.33m0-37.33a112 112 0 10112 112 112 112 0 00-112-112z"
+                      ></path>
+                    </svg>
+                  </span>
+                  @uomaep
+                </button>
+              </a>
+            </li>
+          </ul>
         </div>
-        <div class="container mx-auto px-4 pt-14 mb-6 max-w-screen-sm">
-          <div
-            class="box-content rounded-lg p-3 mb-6 text-center"
-            style="background-color: rgb(49 49 52)"
-          >
-            Hello, I&apos;m a junior developer based in Korea!
-          </div>
-
-          <div class="md:flex justify-between">
-            <div class="mb-4">
-              <h2 class="text-4xl font-bold leading-tight text-primary">
-                Daewon Lim
-              </h2>
-              <p>Digital uomaep ( Artist / Developer / Designer )</p>
-            </div>
-            <div class="flex justify-center">
-              <img
-                src="image/profile.JPG"
-                alt="profile image"
-                class="border-solid border rounded-full h-28 border-white"
-              />
-            </div>
-          </div>
-
-          <div>
-            <h2 class="text-2xl font-bold underline mt-3 mb-4">Work</h2>
-            <p class="text-justify">
-              &nbsp;&nbsp;&nbsp;Daewon is a student and junior developer based
-              in Busan with a passion for studying stacks he wants. He has
-              experience in front-end development, and is a student who is
-              interested in database and back-end and wants to study hard in the
-              future.
-            </p>
-          </div>
-
-          <div>
-            <h2 class="text-2xl font-bold underline mt-3 mb-4">Bio</h2>
-            <div class="flex">
-              <div class="font-bold mr-3">2000</div>
-              <div class="text-justify">Born in Tongyeong, Korea.</div>
-            </div>
-            <div class="flex">
-              <div class="font-bold mr-3">2013</div>
-              <div class="font-justify">Graduation from Elementary School</div>
-            </div>
-            <div class="flex">
-              <div class="font-bold mr-3">2016</div>
-              <div>Graduation from Middle School</div>
-            </div>
-            <div class="flex">
-              <div class="font-bold mr-3">2019</div>
-              <div class="font-justify">Graduation from High School</div>
-            </div>
-            <div class="flex">
-              <div class="font-bold mr-3">2025</div>
-              <div class="font-justify">
-                Software major scheduled to be completed.
-              </div>
-            </div>
-          </div>
-
-          <div>
-            <header class="text-2xl font-bold underline mt-3 mb-4">
-              I Like
-            </header>
-            <p class="text-justify">
-              &nbsp;&nbsp;&nbsp;Music, Singing, Playing Soccer, Driving,
-              Movie...
-            </p>
-          </div>
-
-          <div>
-            <header class="text-2xl font-bold underline mt-3 mb-4">
-              On the web
-            </header>
-            <ul>
-              <li>
-                <a href="https://github.com/uomaep" target="blank">
-                  <button type="button" class="flex px-4 h-10 items-center">
-                    <span class="mr-2">
-                      <svg
-                        stroke="currentColor"
-                        fill="currentColor"
-                        stroke-width="0"
-                        viewBox="0 0 512 512"
-                        aria-hidden="true"
-                        focusable="false"
-                        height="1em"
-                        width="1em"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z"
-                        ></path>
-                      </svg>
-                    </span>
-                    @uomaep
-                  </button>
-                </a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/uomaep/" target="blank">
-                  <button type="button" class="flex px-4 h-10 items-center">
-                    <span class="mr-2">
-                      <svg
-                        stroke="currentColor"
-                        fill="currentColor"
-                        stroke-width="0"
-                        viewBox="0 0 512 512"
-                        aria-hidden="true"
-                        focusable="false"
-                        height="1em"
-                        width="1em"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M349.33 69.33a93.62 93.62 0 0193.34 93.34v186.66a93.62 93.62 0 01-93.34 93.34H162.67a93.62 93.62 0 01-93.34-93.34V162.67a93.62 93.62 0 0193.34-93.34h186.66m0-37.33H162.67C90.8 32 32 90.8 32 162.67v186.66C32 421.2 90.8 480 162.67 480h186.66C421.2 480 480 421.2 480 349.33V162.67C480 90.8 421.2 32 349.33 32z"
-                        ></path>
-                        <path
-                          d="M377.33 162.67a28 28 0 1128-28 27.94 27.94 0 01-28 28zM256 181.33A74.67 74.67 0 11181.33 256 74.75 74.75 0 01256 181.33m0-37.33a112 112 0 10112 112 112 112 0 00-112-112z"
-                        ></path>
-                      </svg>
-                    </span>
-                    @uomaep
-                  </button>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <footer class="text-center text-gray-600">
-          © 2023 Daewon Lim. All Rights Reserved.
-        </footer>
       </div>
+      <footer class="text-center text-gray-600">
+        © 2023 Daewon Lim. All Rights Reserved.
+      </footer>
     </div>
   </body>
 </html>
