--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daewon - Homepage</title>
-    <link rel="stylesheet" href="/css/flowbite.min.css" />
-    <script src="/js/flowbite.min.js"></script>
-    <script src="/js/tailwindcss_3.3.0.js"></script>
-    <script src="/js/navbar.js"></script>
+    <link rel="stylesheet" href="./css/flowbite.min.css" />
+    <script src="./js/flowbite.min.js"></script>
+    <script src="./js/tailwindcss_3.3.0.js"></script>
+    <script src="./js/navbar.js"></script>
   </head>
   <body
     id="body"
@@ -37,7 +37,7 @@
           </div>
           <div class="flex justify-center">
             <img
-              src="/image/profile.JPG"
+              src="./image/profile.JPG"
               alt="profile image"
               class="border-solid border rounded-full h-28 border-white"
             />
