--- a/works.html
+++ b/works.html
@@ -26,7 +26,7 @@
           class="box-content rounded-lg p-3 mb-6 text-center"
           style="background-color: rgb(49 49 52)"
         >
-          Let me introduce my favorite items!
+          Let me introduce my works!
         </div>
         <div class="flex flex-col space-y-10">
           <custom-item
